Autoplay is functional! Also fixed styling so tracks aren't hidden by audioPlayerFooter

--- a/frontend/components/Album/index.css
+++ b/frontend/components/Album/index.css
@@ -3,7 +3,7 @@
     grid-template-columns: 230px 50px 400px 1fr 75px;
     grid-template-rows: 50px 1fr; 
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 40px);
     grid-template-areas:
     " sidebar    .             .              .      .   "
     " sidebar    .    album__information    tracks   .   ";
