--- a/frontend/components/Artist/index.css
+++ b/frontend/components/Artist/index.css
@@ -4,7 +4,7 @@
     grid-template-rows: 50px 75px 60px 40px 100px 210px 30px 50px 400px 25px;
     overflow: scroll;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 40px);
     grid-template-areas:
     " sidebar    .             .              .        .   "
     " sidebar    .        artist-name   artist-name    .   "
